--- a/Heart_Disease_Prediction.ipynb
+++ b/Heart_Disease_Prediction.ipynb
@@ -1,17 +1,51 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "83711964",
+   "metadata": {},
+   "source": [
+    "IMPORTING DEPENDENCIES"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e38e5ad9",
+   "execution_count": 2,
+   "id": "e5974694",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aff56a20",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
