--- a/Heart_Disease_Prediction.ipynb
+++ b/Heart_Disease_Prediction.ipynb
@@ -26,7 +26,19 @@
    "cell_type": "markdown",
    "id": "aff56a20",
    "metadata": {},
-   "source": []
+   "source": [
+    "DATA COLLECTION AND PROCESSING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32dcd4fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heart_data = pd.read_csv(\"heart_disease_data.csv\")"
+   ]
   }
  ],
  "metadata": {
