--- a/Heart_Disease_Prediction.ipynb
+++ b/Heart_Disease_Prediction.ipynb
@@ -462,9 +462,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "67a054a8",
+   "metadata": {},
+   "source": [
+    "SPLITTING THE DATA SET"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8b146c99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = heart_data.drop(columns=\"target\",axis=1)\n",
+    "Y = heart_data[\"target\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "178d48f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  \\\n",
+      "0     63    1   3       145   233    1        0      150      0      2.3   \n",
+      "1     37    1   2       130   250    0        1      187      0      3.5   \n",
+      "2     41    0   1       130   204    0        0      172      0      1.4   \n",
+      "3     56    1   1       120   236    0        1      178      0      0.8   \n",
+      "4     57    0   0       120   354    0        1      163      1      0.6   \n",
+      "..   ...  ...  ..       ...   ...  ...      ...      ...    ...      ...   \n",
+      "298   57    0   0       140   241    0        1      123      1      0.2   \n",
+      "299   45    1   3       110   264    0        1      132      0      1.2   \n",
+      "300   68    1   0       144   193    1        1      141      0      3.4   \n",
+      "301   57    1   0       130   131    0        1      115      1      1.2   \n",
+      "302   57    0   1       130   236    0        0      174      0      0.0   \n",
+      "\n",
+      "     slope  ca  thal  \n",
+      "0        0   0     1  \n",
+      "1        0   0     2  \n",
+      "2        2   0     2  \n",
+      "3        2   0     2  \n",
+      "4        2   0     2  \n",
+      "..     ...  ..   ...  \n",
+      "298      1   0     3  \n",
+      "299      1   0     3  \n",
+      "300      1   2     3  \n",
+      "301      1   1     3  \n",
+      "302      1   1     2  \n",
+      "\n",
+      "[303 rows x 13 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Displaying the Splitted Data\n",
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "79b525d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0      1\n",
+      "1      1\n",
+      "2      1\n",
+      "3      1\n",
+      "4      1\n",
+      "      ..\n",
+      "298    0\n",
+      "299    0\n",
+      "300    0\n",
+      "301    0\n",
+      "302    0\n",
+      "Name: target, Length: 303, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d3d67ae7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(303, 13) (242, 13) (61, 13)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train , X_test , Y_train , Y_test = train_test_split(X , Y , test_size= 0.2 , stratify=Y , random_state=2)\n",
+    "print(X.shape , X_train.shape , X_test.shape)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b146c99",
+   "id": "fb0614f8",
    "metadata": {},
    "outputs": [],
    "source": []
